# aare-core

./: BENCHMARKS.md  README.md  app.py  pyproject.toml  setup.cfg
docs/: RULE_AUTHORING_GUIDE.md
handlers/: formula_compiler.py  ontology_loader.py  smt_verifier.py
ontologies/: example-custom.json
src/aare_core/: __init__.py  cli.py  llm_parser.py  ontology_loader.py  smt_verifier.py
src/aare_core/ontologies/: hipaa-v1.json
tests/: stress_test.py  test_formula_compiler.py  test_verifier.py
