[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aare-core"
version = "0.1.0"
description = "Z3 SMT verification engine for LLM compliance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "aare.ai" }
]
keywords = ["z3", "smt", "verification", "llm", "compliance", "formal-methods"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "z3-solver>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://aare.ai"
Repository = "https://github.com/aare-ai/aare-core"
Documentation = "https://github.com/aare-ai/aare-core#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
